# R3D

./: .gitignore  CMakeLists.txt
R3DEngine/: CMakeLists.txt  main.cpp
R3DEngine/core/: structdefine.h
R3DEngine/core/device/: device.cpp  device.h  game_time.cpp  game_time.h  glfw_event.cpp  glfw_event.h  gui.cpp  gui.h  r_device.cpp  r_device.h  render_list.cpp  render_list.h  scene.cpp  scene.h
R3DEngine/core/effect/: bloom.cpp  bloom.h  cascaded_shadow_map.cpp  cascaded_shadow_map.h  depth_of_field.cpp  depth_of_field.h  oit.cpp  oit.h  stochastic_ssr.cpp  stochastic_ssr.h
R3DEngine/core/math/: camera.cpp  camera.h  hexahedron.cpp  hexahedron.h  plane.cpp  plane.h  route.cpp  route.h  sphere.cpp  sphere.h
R3DEngine/core/resource/: bloom.cpp  bloom.h  buffer_manage.cpp  buffer_manage.h  cascaded_shadow_map.cpp  cascaded_shadow_map.h  depth_of_field.cpp  frame_buffer.cpp  frame_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_create.cpp  mesh_create.h  mesh_manage.cpp  mesh_manage.h  model.cpp  model.h  object.cpp  object.h  oit.cpp  oit.h  render_state_manage.cpp  render_state_manage.h  route_action.cpp  route_action.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_cache.cpp  shader_cache.h  texture_manage.cpp  texture_manage.h
R3DEngine/core/shader/: glsldefine.h
R3DEngine/core/shader/bloom/: downsample.comp  mergebloomfrag.glsl  upsample.comp
R3DEngine/core/shader/blur/: blur.comp
R3DEngine/core/shader/depth/: frag.glsl  vert.glsl
R3DEngine/core/shader/fxaa/: frag.glsl  vert.glsl
R3DEngine/core/util/: math_util.h  r_log.cpp  r_log.h
(+42 files in other folders)
